OLV-20628 [HTML/CSS] Layout for email settings in FormBuilder action-title: vertical align  fix

--- a/src/sass/_forms.sass
+++ b/src/sass/_forms.sass
@@ -974,7 +974,7 @@
 		+opensans-sb
 		display: flex
 		justify-content: space-between
-		align-items: center
+		align-items: baseline
 		padding: 10px 10px 0 0
 		span 
 			width: calc(100% - 20px)
